--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -8,96 +8,60 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 157.254.231.45
-    port: 38461
+    server: cf-lt.sharecentre.online
+    port: 80
     cipher: auto
-    uuid: 8f53d96b-cb13-4197-cd44-37db95809de5
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v005.ssrsub.com
   - &id002
-    name: 🇰🇷_KR_韩国->🇦🇺_AU_澳大利亚_1
+    name: 🇺🇸_US_美国_2
     type: trojan
-    server: frontend.kuangbiaoyun.com
-    port: 40005
+    server: us2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
     udp: true
-    password: 57edfecf-5694-4a34-8072-54a4f0636a62
-    sni: frontend.kuangbiaoyun.com
+    password: d56cb8dc-e932-4d57-bd90-1381a1245f90
+    sni: 206.237.5.220
     skip-cert-verify: true
     network: tcp
   - &id003
-    name: 🇺🇸_US_美国_2
+    name: 🇮🇹_IT_意大利->🇳🇱_NL_荷兰
     type: vmess
-    server: 94.131.14.177
-    port: 80
-    cipher: auto
-    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 94.131.14.177
-  - &id004
-    name: 🇺🇸_US_美国_3
-    type: trojan
-    server: 89.116.180.179
+    server: 45.82.101.6
     port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: p6us4.pqjc.buzz
+    cipher: auto
+    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
+    alterId: 0
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /pq/us4
+      path: /@FORWARDV2RAY
+      headers:
+        host: software.myftp.biz
+  - &id004
+    name: 🇨🇿_CZ_捷克->🇳🇱_NL_荷兰
+    type: vmess
+    server: 92.223.74.20
+    port: 443
+    cipher: auto
+    uuid: d6d76607-603b-450f-b156-b3367f1b4558
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@FORWARDV2RAY
+      headers:
+        host: teletv.onthewifi.com
   - &id005
-    name: 🇰🇷_KR_韩国->🇦🇺_AU_澳大利亚_2
-    type: trojan
-    server: 146.56.179.67
-    port: 40005
-    udp: true
-    password: cc05b267-2e17-4e73-92f0-2cf603aa5997
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇰🇷_KR_韩国->🇺🇸_US_美国_1
-    type: trojan
-    server: frontend.kuangbiaoyun.com
-    port: 40007
-    udp: true
-    password: 57edfecf-5694-4a34-8072-54a4f0636a62
-    sni: frontend.kuangbiaoyun.com
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 193.203.203.88
-    port: 2082
-    cipher: auto
-    uuid: 2ec862af-bd1c-46f5-97af-bffbe61e3164
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id008
-    name: 🇮🇷_IR_伊朗
-    type: vmess
-    server: 37.152.186.109
-    port: 31341
-    cipher: auto
-    uuid: 9d379161-cbeb-4ef6-f023-ca174175ea62
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id009
-    name: 🇺🇸_US_美国_4
+    name: 🇺🇸_US_美国_3
     type: trojan
     server: 167.68.5.183
     port: 443
@@ -108,17 +72,23 @@ proxies:
     network: ws
     ws-opts:
       path: /pq/us3
-  - &id010
-    name: 🇰🇷_KR_韩国->🇺🇸_US_美国_2
-    type: trojan
-    server: 146.56.179.67
-    port: 40007
-    udp: true
-    password: cc05b267-2e17-4e73-92f0-2cf603aa5997
+  - &id006
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
+    type: vmess
+    server: 92.38.170.8
+    port: 443
+    cipher: auto
+    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
+    alterId: 0
+    tls: true
     skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇺🇸_US_美国_5
+    network: ws
+    ws-opts:
+      path: /@FORWARDV2RAY
+      headers:
+        host: software.myftp.biz
+  - &id007
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: ns1.v2-vip.fun
     port: 80
@@ -132,36 +102,10 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v03.ssrsub.com
-  - &id012
-    name: 🇺🇸_US_美国->🇱🇹_LT_立陶宛
+  - &id008
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
-    server: moon.chanell.mci.v-x4ssd.space
-    port: 8080
-    cipher: auto
-    uuid: 6ad7afd7-6958-478e-9fff-88f16f9a2008
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: moon.chanell.mci.v-x4ssd.space
-  - &id013
-    name: 🇱🇺_LU_卢森堡
-    type: vmess
-    server: 107.189.29.193
-    port: 21280
-    cipher: auto
-    uuid: 2d23b71f-78e1-4f17-a7cc-1ef04a910a4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: sbl2.shabijichang.com
+    server: ld2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -172,38 +116,233 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: sbl2.shabijichang.com
-  - &id015
-    name: 🇷🇺_RU_俄罗斯联邦_1
+        host: ld2.shabijichang.com
+  - &id009
+    name: 🇺🇸_US_美国_5
+    type: trojan
+    server: hk1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: 7b01f853-1c72-47db-8f57-151d491b3bf9
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: 46.29.166.237
-    port: 47555
+    server: 104.18.62.248
+    port: 2052
     cipher: auto
-    uuid: 0c49cd19-2758-4d38-e6a8-11f2d6635860
+    uuid: 5081e895-00ec-4ef5-9005-e63dc56a02f6
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇷🇺_RU_俄罗斯联邦_2
+    network: ws
+    ws-opts:
+      path: /public?ed=2048
+      headers:
+        host: uk1.vvv123.store
+  - &id011
+    name: 🇩🇪_DE_德国->🇳🇱_NL_荷兰_1
     type: vmess
-    server: 46.29.166.124
-    port: 47412
+    server: 92.223.124.29
+    port: 443
     cipher: auto
-    uuid: 291a5c6a-447e-4fc7-b3d7-28ebec5cbcd7
+    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: tcp
-  - &id017
+    network: ws
+    ws-opts:
+      path: /@FORWARDV2RAY
+      headers:
+        host: software.myftp.biz
+  - &id012
     name: 🇺🇸_US_美国_7
     type: vmess
-    server: 43.159.145.188
-    port: 8002
+    server: 104.18.202.232
+    port: 80
     cipher: auto
-    uuid: 4c09daf4-a60d-4858-973e-bc200cbbb7a2
+    uuid: 239d61bb-fd16-4b53-85a5-f4c12c0d3d94
     alterId: 0
     tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: us8vm.cdn-03.live
+  - &id013
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: singapore.com
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v005.ssrsub.com
+  - &id014
+    name: 🇧🇬_BG_保加利亚->🇳🇱_NL_荷兰
+    type: vmess
+    server: 5.101.219.6
+    port: 443
+    cipher: auto
+    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@FORWARDV2RAY
+      headers:
+        host: software.myftp.biz
+  - &id015
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 193.203.203.88
+    port: 2082
+    cipher: auto
+    uuid: 2ec862af-bd1c-46f5-97af-bffbe61e3164
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id016
+    name: 🇺🇦_UA_乌克兰->🇳🇱_NL_荷兰
+    type: vmess
+    server: 79.133.108.9
+    port: 443
+    cipher: auto
+    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@FORWARDV2RAY
+      headers:
+        host: software.myftp.biz
+  - &id017
+    name: 🇺🇸_US_美国_9
+    type: trojan
+    server: hk3.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: 7b01f853-1c72-47db-8f57-151d491b3bf9
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇺🇸_US_美国->🇬🇮_GI_直布罗陀
+    type: vmess
+    server: 104.21.75.79
+    port: 80
+    cipher: auto
+    uuid: 5c6f16ce-6a20-41e5-9274-06b4c45051b5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ee2-vmess.sshmax.xyz
+  - &id019
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: cfzl1.freeapp.buzz
+    port: 8080
+    cipher: auto
+    uuid: 3ce4d20b-4374-42a2-a75e-24626b141ea2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu2.mac2win.top
+  - &id020
+    name: 🇩🇪_DE_德国->🇳🇱_NL_荷兰_2
+    type: vmess
+    server: 92.223.124.22
+    port: 443
+    cipher: auto
+    uuid: d6d76607-603b-450f-b156-b3367f1b4558
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@FORWARDV2RAY
+      headers:
+        host: teletv.onthewifi.com
+  - &id021
+    name: 🇺🇸_US_美国_11
+    type: trojan
+    server: jp2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: d56cb8dc-e932-4d57-bd90-1381a1245f90
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 92.38.168.5
+    port: 443
+    cipher: auto
+    uuid: d6d76607-603b-450f-b156-b3367f1b4558
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@FORWARDV2RAY
+      headers:
+        host: teletv.onthewifi.com
+  - &id023
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+    type: vmess
+    server: 92.38.168.7
+    port: 443
+    cipher: auto
+    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@FORWARDV2RAY
+      headers:
+        host: software.myftp.biz
+  - &id024
+    name: 🇺🇸_US_美国_13
+    type: trojan
+    server: 89.116.180.179
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: p6us4.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us4
+  - &id025
+    name: 🇺🇸_US_美国_14
+    type: trojan
+    server: sg2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: d56cb8dc-e932-4d57-bd90-1381a1245f90
+    sni: 206.237.5.220
     skip-cert-verify: true
     network: tcp
 proxy-groups:
@@ -249,6 +388,14 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -271,6 +418,14 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -291,6 +446,14 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
