--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -8,87 +8,16 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: cf-lt.sharecentre.online
-    port: 80
+    server: 148.135.70.168
+    port: 25598
     cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    uuid: 1cff37e2-6e16-4722-ca87-0054c9276a54
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v005.ssrsub.com
   - &id002
     name: 🇺🇸_US_美国_2
-    type: trojan
-    server: us2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: d56cb8dc-e932-4d57-bd90-1381a1245f90
-    sni: 206.237.5.220
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇮🇹_IT_意大利->🇳🇱_NL_荷兰
-    type: vmess
-    server: 45.82.101.6
-    port: 443
-    cipher: auto
-    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@FORWARDV2RAY
-      headers:
-        host: software.myftp.biz
-  - &id004
-    name: 🇨🇿_CZ_捷克->🇳🇱_NL_荷兰
-    type: vmess
-    server: 92.223.74.20
-    port: 443
-    cipher: auto
-    uuid: d6d76607-603b-450f-b156-b3367f1b4558
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@FORWARDV2RAY
-      headers:
-        host: teletv.onthewifi.com
-  - &id005
-    name: 🇺🇸_US_美国_3
-    type: trojan
-    server: 167.68.5.183
-    port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: 6us3.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us3
-  - &id006
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
-    type: vmess
-    server: 92.38.170.8
-    port: 443
-    cipher: auto
-    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@FORWARDV2RAY
-      headers:
-        host: software.myftp.biz
-  - &id007
-    name: 🇺🇸_US_美国_4
     type: vmess
     server: ns1.v2-vip.fun
     port: 80
@@ -102,144 +31,64 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v03.ssrsub.com
-  - &id008
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+  - &id003
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
-  - &id009
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: hk1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: 7b01f853-1c72-47db-8f57-151d491b3bf9
-    sni: 13-231-155-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 104.18.62.248
-    port: 2052
-    cipher: auto
-    uuid: 5081e895-00ec-4ef5-9005-e63dc56a02f6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /public?ed=2048
-      headers:
-        host: uk1.vvv123.store
-  - &id011
-    name: 🇩🇪_DE_德国->🇳🇱_NL_荷兰_1
-    type: vmess
-    server: 92.223.124.29
+    server: fuqiang.misaeng.top
     port: 443
     cipher: auto
-    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
+    uuid: 1cff37e2-6e16-4722-ca87-0054c9276a54
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /@FORWARDV2RAY
-      headers:
-        host: software.myftp.biz
-  - &id012
-    name: 🇺🇸_US_美国_7
+      path: /1cff37e2
+  - &id004
+    name: 🇩🇪_DE_德国_1
     type: vmess
-    server: 104.18.202.232
-    port: 80
+    server: 3.71.86.206
+    port: 30498
     cipher: auto
-    uuid: 239d61bb-fd16-4b53-85a5-f4c12c0d3d94
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: us8vm.cdn-03.live
-  - &id013
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: singapore.com
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v005.ssrsub.com
-  - &id014
-    name: 🇧🇬_BG_保加利亚->🇳🇱_NL_荷兰
-    type: vmess
-    server: 5.101.219.6
-    port: 443
-    cipher: auto
-    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@FORWARDV2RAY
-      headers:
-        host: software.myftp.biz
-  - &id015
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 193.203.203.88
-    port: 2082
-    cipher: auto
-    uuid: 2ec862af-bd1c-46f5-97af-bffbe61e3164
+    uuid: 1b0ebc21-984c-4bff-88af-707b35d2601e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: http
-  - &id016
-    name: 🇺🇦_UA_乌克兰->🇳🇱_NL_荷兰
-    type: vmess
-    server: 79.133.108.9
+  - &id005
+    name: 🇨🇦_CA_加拿大
+    type: trojan
+    server: mrarshaordenshpgaamericang00d.arshaproplus.cf
     port: 443
-    cipher: auto
-    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
-    alterId: 0
-    tls: true
+    udp: true
+    password: 027c71ac-026b-4755-9a33-26558ce6f6a2
+    sni: ddragon.leagueoflegends.com
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: 167.68.5.183
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: 6us3.pqjc.buzz
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /@FORWARDV2RAY
-      headers:
-        host: software.myftp.biz
-  - &id017
-    name: 🇺🇸_US_美国_9
+      path: /pq/us3
+  - &id007
+    name: 🇵🇱_PL_波兰
     type: trojan
-    server: hk3.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    server: worldbehindmiepsycho-passmarsha.sprotarsha.top
     port: 443
     udp: true
-    password: 7b01f853-1c72-47db-8f57-151d491b3bf9
-    sni: 13-231-155-134.nhost.00cdn.com
+    password: fd2ef3e6-75b7-46cf-bc60-e8899851ed57
+    sni: ftp.debian.org
     skip-cert-verify: true
     network: tcp
-  - &id018
-    name: 🇺🇸_US_美国->🇬🇮_GI_直布罗陀
+  - &id008
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 104.21.75.79
     port: 80
@@ -253,78 +102,30 @@ proxies:
       path: /vmess
       headers:
         host: ee2-vmess.sshmax.xyz
-  - &id019
-    name: 🇺🇸_US_美国_10
+  - &id009
+    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国
     type: vmess
-    server: cfzl1.freeapp.buzz
-    port: 8080
+    server: 31.47.45.104
+    port: 58339
     cipher: auto
-    uuid: 3ce4d20b-4374-42a2-a75e-24626b141ea2
+    uuid: 78b9909f-289d-4cff-9f05-73644dcc92a9
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: icu2.mac2win.top
-  - &id020
-    name: 🇩🇪_DE_德国->🇳🇱_NL_荷兰_2
+    network: tcp
+  - &id010
+    name: 🇮🇷_IR_伊朗
     type: vmess
-    server: 92.223.124.22
-    port: 443
+    server: 81.12.27.2
+    port: 58768
     cipher: auto
-    uuid: d6d76607-603b-450f-b156-b3367f1b4558
+    uuid: 324d3868-cfef-4bd4-ab44-1776a406635f
     alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@FORWARDV2RAY
-      headers:
-        host: teletv.onthewifi.com
-  - &id021
-    name: 🇺🇸_US_美国_11
-    type: trojan
-    server: jp2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: d56cb8dc-e932-4d57-bd90-1381a1245f90
-    sni: 13-231-155-134.nhost.00cdn.com
+    tls: false
     skip-cert-verify: true
     network: tcp
-  - &id022
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 92.38.168.5
-    port: 443
-    cipher: auto
-    uuid: d6d76607-603b-450f-b156-b3367f1b4558
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@FORWARDV2RAY
-      headers:
-        host: teletv.onthewifi.com
-  - &id023
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
-    type: vmess
-    server: 92.38.168.7
-    port: 443
-    cipher: auto
-    uuid: 15eaa579-cf84-4792-8612-3f76fb1b6315
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@FORWARDV2RAY
-      headers:
-        host: software.myftp.biz
-  - &id024
-    name: 🇺🇸_US_美国_13
+  - &id011
+    name: 🇺🇸_US_美国_6
     type: trojan
     server: 89.116.180.179
     port: 443
@@ -335,16 +136,83 @@ proxies:
     network: ws
     ws-opts:
       path: /pq/us4
-  - &id025
-    name: 🇺🇸_US_美国_14
+  - &id012
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 3.129.250.63
+    port: 56333
+    cipher: auto
+    uuid: 610fcb1f-ffa6-4819-d313-cd530be44a3c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id013
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 94.131.14.177
+    port: 80
+    cipher: auto
+    uuid: 2c5fee13-f08b-4ba8-86db-27dd51cb9781
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 94.131.14.177
+  - &id014
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
     type: trojan
-    server: sg2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
+    server: frontend.kuangbiaoyun.com
+    port: 40007
     udp: true
-    password: d56cb8dc-e932-4d57-bd90-1381a1245f90
-    sni: 206.237.5.220
+    password: 57edfecf-5694-4a34-8072-54a4f0636a62
+    sni: frontend.kuangbiaoyun.com
     skip-cert-verify: true
     network: tcp
+  - &id015
+    name: 🇩🇪_DE_德国_2
+    type: vmess
+    server: 80.71.157.199
+    port: 443
+    cipher: auto
+    uuid: a88ba483-d935-4cb8-a425-a8a9a468409b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id016
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: ld2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ld2.shabijichang.com
+  - &id017
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: v4.cfnode.eu.org
+    port: 80
+    cipher: auto
+    uuid: f32fb637-67eb-48be-9f29-4523c4720de7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: usyx.651568.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -388,14 +256,6 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -418,14 +278,6 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -446,14 +298,6 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
