--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,180 +6,334 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 89.116.180.179
-    port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: p6us4.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us4
-  - &id002
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: tg_mfbpn_aus2.52vpn.eu.org
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id003
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
-    type: trojan
-    server: frontend.kuangbiaoyun.com
-    port: 40007
-    udp: true
-    password: 57edfecf-5694-4a34-8072-54a4f0636a62
-    sni: frontend.kuangbiaoyun.com
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇩🇪_DE_德国_1
-    type: ss
-    server: 80.92.204.106
-    port: 9094
-    password: rpgbNnU9rDDU4aWZ
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 85.239.52.174
-    port: 51348
-    password: datdGFe4LkMN710aHedy
-    cipher: chacha20-ietf-poly1305
-  - &id006
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 142.202.48.43
-    port: 8090
-    password: PCnnH6SQSnfoS27
-    cipher: aes-256-gcm
-  - &id007
     name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 51.158.54.209
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 89.187.181.179
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id009
-    name: 🇺🇸_US_美国_6
-    type: ss
-    server: 89.187.179.192
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇫🇷_FR_法国_2
     type: ss
     server: 57.129.1.19
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id011
-    name: 🇩🇪_DE_德国_2
-    type: vmess
-    server: 80.71.157.199
-    port: 443
-    cipher: auto
-    uuid: a88ba483-d935-4cb8-a425-a8a9a468409b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id012
-    name: 🇨🇦_CA_加拿大
-    type: trojan
-    server: mrarshaordenshpgaamericang00d.arshaproplus.cf
-    port: 443
-    udp: true
-    password: 027c71ac-026b-4755-9a33-26558ce6f6a2
-    sni: ddragon.leagueoflegends.com
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇭🇰_HK_香港
+  - &id002
+    name: 🇺🇸_US_美国_1
     type: ss
-    server: 165.154.202.237
-    port: 10001
-    password: 1CeOM6FSNg
-    cipher: aes-256-gcm
-  - &id014
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: cf.network383.online
-    port: 2083
-    cipher: auto
-    uuid: 055079b7-84cb-4619-8b46-f21e642232ef
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: amsb.carfin.tech
-    network: ws
-    ws-opts:
-      path: /@apt_mahdi
-      headers:
-        host: amsb.carfin.tech
-  - &id015
-    name: 🇮🇷_IR_伊朗->🇫🇷_FR_法国
-    type: vmess
-    server: 81.12.27.2
-    port: 58768
-    cipher: auto
-    uuid: 324d3868-cfef-4bd4-ab44-1776a406635f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 172.67.221.114
-    port: 2083
-    cipher: auto
-    uuid: 055079b7-84cb-4619-8b46-f21e642232ef
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: amsb.carfin.tech
-    network: ws
-    ws-opts:
-      path: /@apt_mahdi
-      headers:
-        host: amsb.carfin.tech
-  - &id017
-    name: 🇬🇧_GB_英国_1
+    server: 45.150.65.34
+    port: 11285
+    password: yTzEeImDDKooThuQKhZjob
+    cipher: chacha20-ietf-poly1305
+  - &id003
+    name: 🇫🇷_FR_法国_2
     type: ss
-    server: 198.244.231.34
+    server: 62.210.88.148
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id018
-    name: 🇬🇧_GB_英国_2
+  - &id004
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 62.210.88.168
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id005
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 51.159.221.203
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: 
+      UNLK2.LVWF8N-HH8E-2300-NMOO-D2E9NAOBEACN.9D8F269F96B25232-759CBB36D6548597.KAUFEN
+    port: 20352
+    udp: true
+    password: d56cb8dc-e932-4d57-bd90-1381a1245f90
+    sni: 206.237.5.220
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇬🇧_GB_英国_1
     type: ss
     server: 198.244.228.191
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
+  - &id008
+    name: 🇬🇧_GB_英国_2
+    type: ss
+    server: 198.244.231.27
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 37.59.21.131
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id010
+    name: 🇬🇧_GB_英国_3
+    type: ss
+    server: 198.244.231.26
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇷🇺_RU_俄罗斯联邦_1
+    type: ss
+    server: 91.194.161.7
+    port: 8388
+    password: OWJlYjYy
+    cipher: chacha20-ietf-poly1305
+  - &id012
+    name: 🇫🇷_FR_法国_6
+    type: ss
+    server: 162.19.204.83
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇫🇷_FR_法国_7
+    type: ss
+    server: 51.159.222.35
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id014
+    name: 🇬🇧_GB_英国_4
+    type: ss
+    server: 198.244.231.24
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id015
+    name: 🇫🇷_FR_法国_8
+    type: ss
+    server: 135.125.172.153
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id016
+    name: 🇫🇷_FR_法国_9
+    type: ss
+    server: 51.159.221.227
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id017
+    name: 🇫🇷_FR_法国_10
+    type: ss
+    server: 162.19.59.162
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id018
+    name: 🇫🇷_FR_法国_11
+    type: ss
+    server: 146.59.110.169
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id019
-    name: 🇺🇸_US_美国_9
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 52.23.176.97
+    port: 34511
+    password: 5k55aIUjJaaQ8YjE6772wF
+    cipher: chacha20-ietf-poly1305
+  - &id020
+    name: 🇺🇸_US_美国_4
     type: trojan
-    server: us1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    server: hk2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
     port: 443
     udp: true
     password: 928dc6ee-495b-446f-9f20-883dedce564a
-    sni: 206.237.5.220
+    sni: 13-231-155-134.nhost.00cdn.com
     skip-cert-verify: true
     network: tcp
-  - &id020
-    name: 🇺🇸_US_美国_10
+  - &id021
+    name: 🇫🇷_FR_法国_12
+    type: ss
+    server: 162.19.204.80
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id022
+    name: 🇫🇷_FR_法国_13
+    type: ss
+    server: 162.19.204.75
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id023
+    name: 🇫🇷_FR_法国_14
+    type: ss
+    server: 162.19.204.77
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id024
+    name: 🇫🇷_FR_法国_15
+    type: ss
+    server: 37.59.21.130
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id025
+    name: 🇺🇸_US_美国_5
+    type: trojan
+    server: hk3.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: d56cb8dc-e932-4d57-bd90-1381a1245f90
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇫🇷_FR_法国_16
+    type: ss
+    server: 162.19.204.81
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id027
+    name: 🇫🇷_FR_法国_17
+    type: ss
+    server: 162.19.59.166
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id028
+    name: 🇫🇷_FR_法国_18
+    type: ss
+    server: 51.158.200.72
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id029
+    name: 🇫🇷_FR_法国_19
+    type: ss
+    server: 162.19.59.160
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id030
+    name: 🇬🇧_GB_英国_5
+    type: ss
+    server: 198.244.231.28
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id031
+    name: 🇫🇷_FR_法国_20
+    type: ss
+    server: 54.36.174.181
+    port: 6679
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id032
+    name: 🇫🇷_FR_法国_21
+    type: ss
+    server: 54.36.174.181
+    port: 8882
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id033
+    name: 🇫🇷_FR_法国_22
+    type: ss
+    server: 51.159.221.219
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id034
+    name: 🇫🇷_FR_法国_23
+    type: ss
+    server: 54.36.174.181
+    port: 8881
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id035
+    name: 🇫🇷_FR_法国_24
+    type: ss
+    server: 54.36.174.181
+    port: 9101
+    password: e4FCWrgpkji3QY
+    cipher: aes-256-gcm
+  - &id036
+    name: 🇫🇷_FR_法国_25
+    type: ss
+    server: 54.36.174.181
+    port: 6697
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id037
+    name: 🇫🇷_FR_法国_26
+    type: ss
+    server: 54.36.174.181
+    port: 5600
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id038
+    name: 🇫🇷_FR_法国_27
+    type: ss
+    server: 54.36.174.181
+    port: 2376
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id039
+    name: 🇫🇷_FR_法国_28
+    type: ss
+    server: 54.36.174.181
+    port: 7306
+    password: FoOiGlkAA9yPEGP
+    cipher: aes-256-gcm
+  - &id040
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id041
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: tg_mfbpn_aus2.52vpn.eu.org
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id042
+    name: 🇬🇧_GB_英国_6
+    type: ss
+    server: 5.181.27.97
+    port: 15100
+    password: GeZbX4Enoc
+    cipher: aes-256-gcm
+  - &id043
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: ld2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ld2.shabijichang.com
+  - &id044
+    name: 🇺🇸_US_美国_8
     type: vmess
     server: 104.21.75.246
     port: 80
@@ -193,89 +347,19 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id021
-    name: 🇺🇸_US_美国_11
+  - &id045
+    name: 🇷🇺_RU_俄罗斯联邦_2
     type: vmess
-    server: cf-lt.sharecentre.online
-    port: 80
+    server: 62.133.60.134
+    port: 10001
     cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v005.ssrsub.com
-  - &id022
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 1208.ssfree.ru
-    port: 443
-    cipher: auto
-    uuid: 57e8508a-983e-11ee-821b-00163e49219e
+    uuid: 998d0aea-9540-11ee-9111-3fe7c1d34d71
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /search
-  - &id023
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id024
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: ss
-    server: 91.194.161.7
-    port: 8388
-    password: OWJlYjYy
-    cipher: chacha20-ietf-poly1305
-  - &id025
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 135.125.172.153
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id026
-    name: 🇩🇪_DE_德国_3
-    type: vmess
-    server: 3.71.86.206
-    port: 30498
-    cipher: auto
-    uuid: 1b0ebc21-984c-4bff-88af-707b35d2601e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id027
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: us-02.jikuai.xyz
-    port: 2082
-    cipher: auto
-    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us-02.jikuai.xyz
+      path: /vpnjantit
 proxy-groups:
   - name: PROXY
     type: select
@@ -329,6 +413,24 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
+      - *id040
+      - *id041
+      - *id042
+      - *id043
+      - *id044
+      - *id045
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -361,6 +463,24 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
+      - *id040
+      - *id041
+      - *id042
+      - *id043
+      - *id044
+      - *id045
   - name: SELECT
     type: select
     proxies:
@@ -391,6 +511,24 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
+      - *id040
+      - *id041
+      - *id042
+      - *id043
+      - *id044
+      - *id045
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
